Subtraction api added

--- a/.gitignore
+++ b/.gitignore
@@ -676,3 +676,8 @@ fabric.properties
 Calculator/.idea/.idea.Calculator/.idea/vcs.xml
 Calculator/.idea/.idea.Calculator/.idea/encodings.xml
 Calculator/.idea/.idea.Calculator/.idea/indexLayout.xml
+.idea/.idea.DLS-Compulsory.dir/.idea/indexLayout.xml
+.idea/.idea.DLS-Compulsory.dir/.idea/projectSettingsUpdater.xml
+Calculator/.idea/.idea.Calculator/.idea/workspace.xml
+Calculator/.idea/.idea.Calculator/.idea/workspace.xml
+Calculator/.idea/.idea.Calculator/.idea/workspace.xml
