--- a/Calculator/AdditionService/AdditionService.csproj
+++ b/Calculator/AdditionService/AdditionService.csproj
@@ -17,4 +17,8 @@
         <Link>.dockerignore</Link>
       </Content>
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Monitoring\Monitoring.csproj" />
+    </ItemGroup>
 </Project>
