updated gitignore, but probably still doesnt work

--- a/Calculator/.gitignore
+++ b/Calculator/.gitignore
@@ -672,12 +672,12 @@ fabric.properties
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
-# End of https://www.toptal.com/developers/gitignore/api/csharp,rider,visualstudio,visualstudiocode
-Calculator/.idea/.idea.Calculator/.idea/vcs.xml
-Calculator/.idea/.idea.Calculator/.idea/encodings.xml
-Calculator/.idea/.idea.Calculator/.idea/indexLayout.xml
-.idea/.idea.DLS-Compulsory.dir/.idea/indexLayout.xml
-.idea/.idea.DLS-Compulsory.dir/.idea/projectSettingsUpdater.xml
-Calculator/.idea/.idea.Calculator/.idea/workspace.xml
-Calculator/.idea/.idea.Calculator/.idea/workspace.xml
-Calculator/.idea/.idea.Calculator/.idea/workspace.xml
+# End of https://www.toptal.com/developers/gitignore/api/csharp,rider,visualstudio,visualstudiocode  
+Calculator/.idea/.idea.Calculator/.idea/vcs.xml  
+Calculator/.idea/.idea.Calculator/.idea/encodings.xml  
+Calculator/.idea/.idea.Calculator/.idea/indexLayout.xml  
+.idea/.idea.DLS-Compulsory.dir/.idea/indexLayout.xml  
+.idea/.idea.DLS-Compulsory.dir/.idea/projectSettingsUpdater.xml  
+Calculator/.idea/.idea.Calculator/.idea/workspace.xml  
+/Calculator/.idea/.idea.Calculator/.idea/workspace.xml  
+
