updated compose to deploy 3 replicas of each service

--- a/Calculator/docker-compose.yml
+++ b/Calculator/docker-compose.yml
@@ -5,38 +5,36 @@ services:
     build:
       context: .
       dockerfile: AdditionService/Dockerfile
-    ports:
-      - "8081:80"
-      - "8082:443"
     networks:
       - local_network
     depends_on:
       - seq
+    deploy:
+        replicas: 3
   Subtract:
     image: subtractionservice
     build:
       context: .
       dockerfile: SubtractionService/Dockerfile
-    ports:
-      - "8083:80"
-      - "8084:443"
     networks:
       - local_network
     depends_on:
       - seq
+    deploy:
+      replicas: 3
   Calculator:
     image: calculator
     build:
       context: .
       dockerfile: CalculationService/Dockerfile
-    ports:
-      - "8085:80"
-      - "8086:443"
+    networks:
+      - local_network
     depends_on:
       - calculator-db
       - seq
-    networks:
-      - local_network
+    deploy:
+        replicas: 3
+    
   seq:
     image: datalust/seq:latest
     ports:
