--- a/Calculator/CalculationService/CalculationService.csproj
+++ b/Calculator/CalculationService/CalculationService.csproj
@@ -30,4 +30,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Monitoring\Monitoring.csproj" />
+    </ItemGroup>
+
 </Project>
