--- a/Calculator/Monitoring/Monitoring.csproj
+++ b/Calculator/Monitoring/Monitoring.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.7.0" />
       <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.7.0" />
       <PackageReference Include="Serilog" Version="3.1.1" />
+      <PackageReference Include="Serilog.Enrichers.Span" Version="3.1.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
       <PackageReference Include="Serilog.Sinks.Seq" Version="6.0.0" />
     </ItemGroup>
