--- a/Calculator/docker-compose.yml
+++ b/Calculator/docker-compose.yml
@@ -40,7 +40,6 @@ services:
       - local_network
     depends_on:
       - calculator-db
-      - zipkin
       
   seq:
     image: datalust/seq:latest
@@ -80,10 +79,12 @@ services:
   calculator-db:
     image: mcr.microsoft.com/azure-sql-edge:latest
     environment:
-      MSSQL_SA_PASSWORD: "Password123"
+      MSSQL_SA_PASSWORD: "SuperSecret7!"
       ACCEPT_EULA: "Y"
     volumes:
       - mssql_data_db:/var/opt/mssql
+    ports:
+      - "1434:1433"
     networks:
       - local_network
     
