--- a/Calculator/docker-compose.yml
+++ b/Calculator/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.7'
 services:
   calculator-db:
-    image: mcr.microsoft.com/azure-sql-edge:latest
+    image: mcr.microsoft.com/mssql/server:2022-latest
     environment:
       MSSQL_SA_PASSWORD: "SuperSecret7!"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
     volumes:
-      - mssql_data_db:/var/opt/mssql/auth
+      - mssql_data_db:/var/opt/mssql
     networks:
       - local_network
       
