--- a/Calculator/CalculationService/Dockerfile
+++ b/Calculator/CalculationService/Dockerfile
@@ -6,15 +6,17 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["CalculationService/CalculationService.csproj", "CalculationService/"]
-RUN dotnet restore "CalculationService/CalculationService.csproj"
+COPY ["Calculator/CalculationService/CalculationService.csproj", "Calculator/CalculationService/"]
+COPY ["Calculator/Monitoring/Monitoring.csproj", "Calculator/Monitoring/"]
+RUN dotnet restore "./Calculator/CalculationService/CalculationService.csproj"
+
 COPY . .
-WORKDIR "/src/CalculationService"
-RUN dotnet build "CalculationService.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Calculator/CalculationService"
+RUN dotnet build "./CalculationService.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "CalculationService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./CalculationService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
