--- a/Calculator/AdditionService/AdditionService.csproj
+++ b/Calculator/AdditionService/AdditionService.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="OpenTelemetry" Version="1.7.0" />
         <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.7.0" />
         <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.7.0" />
+        <PackageReference Include="Polly" Version="8.3.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
